Fix text overflow on tweet

--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -23,6 +23,7 @@ article.tweet p {
   padding: 20px;
   margin: 0px;
   font-weight: bold;
+  overflow-wrap: break-word;
 }
 
 article.tweet footer {
